--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding: 10px 12px 2px;
+  padding-top: 14px;
   width: 100%;
 }
 
